# ffmpeg-batch

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
source/: ffmpeg-batch.py
src/ffbatch/: ffbatch.py  presets.json
